add article api-doc; add tutorial api-doc
